--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
-</head>
-<body>
-<div class="container">
-    <div class="sc1">1</div>
-    <div class="sc2">2</div>
-    <div class="sc3">3</div>
-</div>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <div class="sc1"></div>
+      <div class="sc2">
+        <div class="runbox">
+            <div class="card1">
+                <div class="circle"></div>
+                <div class="content">
+                    <h2>技术革新</h2>
+                    <p>从世界第一部电影的出现到今天，在电影蓬勃发展的这一百多年中，电影技术不断革新，其目标都是为了让电影画面无限地接近现实世界和内心世界。</p>
+                    <a href="#">了解更多</a>
+                </div>
+                <img src="imgs/电影打板器.png" alt="img">
+            </div>
+            <div class="card2">
+                <div class="circle"></div>
+                <div class="content">
+                    <h2>流派发展</h2>
+                    <p>从举世闻名的好莱坞的类型电影到欧洲风起云涌的电影运动，从日韩电影的唯美到第三世界电影的崛起，以及中国电影的艰难历程以及电视剧工业化的努力。</p>
+                    <a href="#">了解更多</a>
+                </div>
+                <img src="imgs/电影胶卷.png" alt="img">
+            </div>
+        </div>
+        <div class="light">
+          <h1 data-char="电影艺术">电影艺术</h1>
+        </div>
+      </div>
+      <div class="sc3"></div>
+    </div>
+  </body>
 </html>
