--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <div class="sc1"></div>
       <div class="sc2">
+        <video src="videos/250304087_nb2-1-64~1.mp4" id="s2video" muted loop autoplay playsinline></video>
         <div class="runbox">
             <div class="card1">
                 <div class="circle"></div>
