--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="circle"></div>
                 <div class="content">
                     <h2>流派发展</h2>
-                    <p>从举世闻名的好莱坞的类型电影到欧洲风起云涌的电影运动，从日韩电影的唯美到第三世界电影的崛起，以及中国电影的艰难历程以及电视剧工业化的努力。</p>
+                    <p>电影从一块露天的幕布变成室内的光影艺术，从写实记录变成所谓“第七艺术。电影一直在向前，不同的流派涌现在历史舞台，探寻艺术的各种可能性。”</p>
                     <a href="#">了解更多</a>
                 </div>
                 <img src="imgs/电影胶卷.png" alt="img">
