--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="content">
                     <h2>技术革新</h2>
                     <p>从世界第一部电影的出现到今天，在电影蓬勃发展的这一百多年中，电影技术不断革新，其目标都是为了让电影画面无限地接近现实世界和内心世界。</p>
-                    <a href="#">了解更多</a>
+                    <a href="index1/index1.html">了解更多</a>
                 </div>
                 <img src="imgs/电影打板器.png" alt="img">
             </div>
