--- a/index1/index1.html
+++ b/index1/index1.html
@@ -1,12 +1,89 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-11-03 19:11:01
+ * @LastEditTime: 2021-11-04 15:14:49
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: \Zero-Cup-2021\index1\index1.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS 视差滚动</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <main class="main">
+    <section class="list-item">
+    <div class="item-image">
+        <img src="./images/1.jpg" alt="item-image-1">
+    </div>
+    <div class="timecard count1">
+        <div class="card_image"> <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> </div>
+        <p>1870</p>
     
+    </div>
+    <div class="content count1">
+        <h1>电影技术的诞生</h1>
+        <p>早期电影技术奠基: 电影技术发展的奠基先是大约公元前400年左右针孔成像原理被发现，后有1800年英国科学家Thomas Wedgwood首次尝试通过化学的方式对图像进行记录，再到光刻摄影法、达盖尔式摄影法、卡罗式摄影法的诞生，到湿板火棉摄影法与定影胶体的探究、彩色摄影的实现等。这些摄影技术和载体的发现与发明，在很大程度上为电影技术的诞生做出了铺垫。</p>
+        <!-- <br> -->
+        <p>电影技术的诞生1872年，美国参议院Leland Stanford与好友发生了激烈的争执：马奔跑时蹄子是否都着地？为了解决这个问题，英国摄影师Eadweard Muybridge用24架照相机，拍下了24张照片。这些照片被按先后顺序剪接起来，每相邻的两张照片动作差别很小，组成了一条连贯的照片带。根据这组照片，终于看出马在奔跑时，总有一蹄着地，不会四蹄腾空。一次，有人无意识地快速牵动那条照片带，结果眼前出现了一幕奇异的景象：各张照片中那些静止的马叠成了一匹运动的马。这就是最早的电影技术的诞生！</p>
+    </div>
+    </section>
+
+    <section class="list-item">
+      <div class="item-image">
+        <img src="./images/2.jpg" alt="item-image-2">
+      </div>
+      <div class="item-text">
+        <div class="item-title">「言叶之庭」</div>
+        <div class="item-desc">每晚临睡前 每天睁开眼的瞬间 不知不觉 我都在祈盼雨天 祈盼雨天 祈盼和那个人 再次相会</div>
+      </div>
+    </section>
+
+    <section class="list-item">
+      <div class="item-image">
+        <img src="./images/3.jpg" alt="item-image-3">
+      </div>
+      <div class="item-text">
+        <div class="item-title">「你的名字」</div>
+        <div class="item-desc">黄昏，不是白昼亦不是夜晚，是我努力却看不清你的脸。</div>
+      </div>
+    </section>
+
+    <section class="list-item">
+      <div class="item-image">
+        <img src="./images/4.jpg" alt="item-image-4">
+      </div>
+      <div class="item-text">
+        <div class="item-title">「天气之子」</div>
+        <div class="item-desc">天气真的是很不可思议，光只是天空的模样就让人感动不已。</div>
+      </div>
+    </section>
+
+    <section class="list-item">
+      <div class="item-image">
+        <img src="./images/5.jpg" alt="item-image-5">
+      </div>
+      <div class="item-text">
+        <div class="item-title">「K-ON！」</div>
+        <div class="item-desc">重要的，珍惜的，一直在身边，一旦成为理所当然，就难以发现</div>
+      </div>
+    </section>
+
+    <section class="list-item">
+      <div class="item-image">
+        <img src="./images/6.jpg" alt="item-image-6">
+      </div>
+      <div class="item-text">
+        <div class="item-title">「CLANNAD」</div>
+        <div class="item-desc">我也很没用，但是两个人一起的话，就会变得很坚强。</div>
+      </div>
+    </section>
+  </main>
 </body>
+<script src="../js/jquery.js"></script>
+<script src="./js/main.js"></script>
 </html>
