--- a/index2/index2.html
+++ b/index2/index2.html
@@ -10,69 +10,124 @@
 
 <body>
     <h1>电影流派史</h1>
-    <h2>· 关于他本人</h2>
-    <div class="box-1">
-        <div class="para"><br><i>Sufjan Stevens</i>;生于1975年7月1日。
-            是美国歌手，词曲作者，多种乐器的演奏家。
-            他已经发行了九张个人录音室专辑和多张与其他艺术家合作的专辑，获得过格莱美奖和奥斯卡奖提名。<br><br>
-            他的首张专辑<i>A Sun Came</i>，于 2000 年在他与继父共同创立的Asthmatic Kitty厂牌上发行。
-            他 2005 年的专辑<i>Illinois</i>获得了广泛的好评，在Billboard Top Heatseekers排行榜上排名第一，
-            该专辑中的单曲“ Chicago ”同样位居单曲榜第一。Sufjan后来创作了 2017 年电影《请以你的名字呼唤我》的主题曲，获得了奥斯卡奖最佳原创歌曲提名以及格莱美最佳电影配乐提名。<br><br>
-            Sufjan涉猎广泛，发布过不同风格的专辑，从电子乐<i>Enjoy Your Rabbit</i>、lofi民谣<i>Seven
-                Swan</i>、交响乐的集大成者<i>Illinois</i>到以圣诞节为主题的<i>Song For Christmas</i>,
-            他使用各种乐器为作品添彩，常在同一张录音中亲自演奏其中的许多乐器。Sufjan的音乐也以探索各种主题而闻名，尤其是宗教和灵性。<br><br>Sufjan的第九张——也是最新的录音室专辑<i>Convocations</i>于
-            2021 年发行</div>
-        <br>
+    <h2>20世纪初</h2>
+    <div class="box-1" style="background-color: rgb(255, 240, 217);color: rgb(77, 55, 55);">
+        <div class="img">
+            <img src="img/grandma's.jpg">
+            <p>《祖母的放大镜》<br>由George Albert Smith执导，是一部无声短片，片中，年轻的Willy借用
+                一个巨大的放大镜聚焦于各种物体，目的是演示电影特写新技术。</p>
+        </div>
+        <div class="subtitle">布 莱 顿 学 派</div>
+        <p class="para">起源于英国布莱顿地区的布莱顿学派是世界电影史上有据可考的第一个学术流派。
+            主张在露天场景中创造真实的生活片段，是现实主义的萌芽，对重大社会问题予以了充分的关注和
+            表现。给电影带来了早期蒙太奇，从而通过电影画面的有机组合，使得电影开始具备了属于自己所
+            独有的叙事语言。<br><br>
+            代表:乔治·阿尔培特·斯密士《祖母的放大镜》、《望远镜中所见的景象》、《玛丽珍妮的灾难》，
+            詹姆士·威廉逊《中国教会被袭记》，埃斯美·柯林斯《汽车中的婚礼》，西赛尔·海普华斯《义犬
+            救主记》。
+        </p>
     </div>
-    <br><br><br>
-    <h2>· 关于他的歌</h2>
-    <br>
-    <h3  style="float: right;">Carrie & Lowell</h3>
-    <p style="text-align: right;"><img src="c&r.jpg" width="20%" height="40%"></p>
-    <br>
-    <div class="box-2" style="display: flex;">
-        <img src="psc.jpg" width="30%" height="50%" style="margin: 8px;" alt="Carrie & Lowell 关于继父与母亲、童年生活、对存在的思考">
-        <div class="para">
-            <b>关于继父与母亲、童年生活、对存在的思考。</b><br>乐评摘录：<br>
-            <br>这张专辑以他的母亲Carrie和继父Lowell的名字命名，小时候的sufjan对carrie完全没有记忆，直到他五岁之时，carrie和第二任丈夫lowell结婚后，sufjan才有更多机会与母亲一同呆在一起。这之后的每个夏天都会把Carrie之前的孩子们接到位于俄勒冈州的家里度假，一连三年。这是Sufjan童年最快乐的一段时光。但Carrie遭受着精神分裂症和抑郁的折磨，加上酗酒，她后来与lowell离婚，再度开始了无家可归的生活，sufjan大部分时候都不知道母亲在哪里，直到2012年接到母亲患上胃癌的消息……虽然他和母亲的关系十分复杂，但母亲的去世仍对他有很大打击。sufjan曾说自己在母亲去世后曾找寻过母亲的踪迹，在记忆里努力寻找母亲的形象，但终究一无所得。这种空虚感和渐渐压垮了他。但这之后他原谅了母亲，化解了悲伤，开始反思人生，寻找生命的意义和生命的终结——死亡。<br>
-            <br>Stevens都是自己来写歌，把生活琐碎融进更大故事里，但这次，他的自传成了重要的部分，它本身就是一部宏大的历史。这些歌配合上小规模的器乐，坚定的歌词，直面探讨童年、家庭、悲痛、抑郁、孤独、信仰、重生这些话题。它们有关于圣经、神话的描写，但最直接描写的还是Stevens和他的家庭。一些歌里（"Carrie
-            & Lowell", "Eugene", "All of Me Wants All of
-            You"）提到一次夏日旅行，那时Stevens6岁左右（5-8岁），他和母亲、继父、弟弟一起去了俄勒冈州。关于俄勒冈州的回忆，有尤金，蒂拉穆克森林火灾，斯宾塞山，遗失的蓝桶矿脉，还有与叫Subaru男人一起学习的游泳课。
-            Stevens与母亲最亲近的时候，或者说他俩离得最近的时候，他会用iPhone在俄勒冈州克拉马斯福尔斯市的旅馆里录下Carrie & Lowell里面的一些歌，就像他试着去再现那些时光。<br>
-            <br>除了细细斟酌后的精妙歌词外，它的音乐部分也做的很好。他请来Laura Veirs、 S. Carey,、Thomas Bartlett
-            等人，他们像鬼魂游荡在由Stevens精心构筑的音景、作曲环绕的房子中。他完美地融合了不插电与插电部分，每一次的聆听都能让你多一点潜入他的音乐里。钢琴、风琴、星空流动般的声音、合成器涂片、打击乐器的喀哒声、双声道人声、扬起的背景和声，快速弹奏不插电吉他声，此情此景不由想起Elliott
-            Smith。过去Sufjan喜欢炫技，歌曲通常多组曲，再配上宏大制作；这次虽有野心，但不会过。你时常会忘记音乐的存在，若是你巧好注意到，它定会是这般朗朗上口，独出心裁，旋律优美流畅。专辑制作同样让人难以忘怀，简约不简单。<br>
-            <br>专辑内页有张照片，小时候的Stevens坐在凳子上，吃着一根香蕉。内页还有其他一些照片，看上去是在再现俄勒冈州的那些夏天：海滩，斑斑点点的岩石，油了一半漆的小房子，旁边有树有小山。他看上去不开心，有点难过；他还只是孩子，坐在凳子上，吃着东西。但照片看上去有点忧郁，或者是别的什么东西，是你听完Carrie
-            &
-            Lowell后加进去的。但有一点是确定的：母亲站在他身旁。虽然她没有看向他，但她就在那儿。（她在三张图片里出现过，但三张你都看不到她的眼睛）你会想这是Lowell拍的照片（内页的最后一页，Carrie在织东西，她后面的镜子里出现了Lowell）。看照片时，你难免会想这个小孩多年后能写出如此杰作，深谙痛苦挣扎、死亡孤独。照片里，他仍是个孩子，有着和其他孩子一样的烦恼，想去搞清这个世界。但，至少那时，他还在母亲身边。他会开心的，大概吧。
+
+    <div class="box-2" style="background-color: rgb(255, 240, 217);color: rgb(77, 55, 55);">
+        <div class="subtitle">欧 洲 先 锋 派</div>
+        <p class="para">强调先锋性和纯粹性，过分注重抽象的画面造型以及视觉情绪节奏；反对电影商业
+            化，主张电影是小众的无功利的纯粹艺术品；反对叙事，反对情节和人物刻画，主张以抽象的图形、
+            唯美的形式和空洞的抒情做为全部内容；反对理性，喜欢联想，拒绝现实，喜欢梦幻。<br><br>
+            其子流派包括法国印象主义、超现实主义，德国表现主义<br><br>
+            代表作:费南·莱谢尔《机器的舞蹈》，雷内·克莱尔《休息节目》，路易·布努艾尔《一条安达鲁狗》
+            ，谢尔曼·杜拉克《贝壳与僧侣》，罗伯特·维内的《卡里加里博士》。
+        </p>
+        <div class="img">
+            <img src="img/a dog.jpg">
+            <p>《一条安达鲁狗》<br>超现实主义电影之父路易斯·布努埃尔和超现实主义画家萨尔瓦多·达利的跨界合作。表现的是人
+                的梦境和潜意识。</p>
         </div>
     </div>
-    <br><br><br>
-    <h3 style="text-align: right;">其他专辑</h3>
-    <div class="box-1" style="display: flex;align-items: center;">
-        <div class="para">
-            <b>Illinois</b><br>
-            <b>来吧，感受伊利诺伊州吧。</b><br>
-            <br>Sufjan在2003年出版了一张歌颂自己家乡的唱片《Michigan》，并表示过希望替美国的每一个州都写一张专辑（The Fifty States
-            Project），其中05年推出的《Illinois》，便是这「计划」的第二部曲。Sufjan为了做好此专辑，既参阅了不少有关伊利诺州的背景文献，更亲身到当地的田园农庄进行「采风」，他试图以Illinois的历史、社会事件、建筑、人文等庞杂的内容为引，传达出自己对宗教、信念、生命和关于「爱」的真切感受。
+    <h2>1920s</h2>
+    <div class="box-1" style="background-color: whitesmoke;color: rgb(77, 55, 55);">
+        <div class="img">
+            <img src="img/ship.jpg">
+            <p>《战舰波将金号》<br>一艘名为波将金号的战舰上，原本这是一艘沙皇海军的骄傲，可是因为连续数
+                月的伙食太差，导致了一场哗变，一场血腥的反抗即将展开。</p>
         </div>
-        <img src="ill.jpg" width="20%" height="20%" style="margin: 8px;">
+        <div class="subtitle">苏联蒙太奇电影学派</div>
+        <p class="para">蒙太奇，电影的一种表现手法，指通过拼接两个或多个本无关联的镜头，展现一个意思连
+            贯的情节或一段情感。即当拼接不同镜头在，产生各镜头单独存在时所不具有的特定含义。<br><br>
+            20世纪20年代，蒙太奇是电影的基础，在镜头与镜头之间运用对比、隐喻、重复、变换节奏等组合手法。
+            <br>代表︰爱森斯坦《战舰波将金号》，普多夫金《母亲》。
+        </p>
     </div>
-    <br><br>
-    <div class="box-2" style="display: flex;align-items: center;">
-        <img src="adz.jpg" width="20%" height="20%" style="margin: 8px;">
-        <div class="para">
-            <b>The Age of Adz</b><br>
-            <b>电子乐与民谣的前卫结合。</b><br>
-            <br>在这长达75分钟的第6张录音室专辑里，Sufjan没有继续玩美国某个州的概念，而是更关注自己的精神状态。他扔掉了标志性的班卓琴，而用清新的木吉他、精心的合唱团、磅礴的室内管弦乐、灿烂的电子音乐和古怪的电声实验架构起一部史诗性的后现代实验民谣巨著，令人叹为听止。
+
+    <h2>1940s-1950s</h2>
+    <div class="box-1" style="background-color: whitesmoke;color: rgb(77, 55, 55);margin-left: 70px;">
+        <div class="img">
+            <img src="img/roam.jpg">
+            <p>《罗马，不设防的城市》<br>1944年，罗马，被纳粹侵占下伤痕累累的大街。德军肆无忌惮的搜捕着保
+                卫家园的游击队，意大利地下反抗组织领袖乔治·曼菲蒂坚持完成任务，被捕后英勇牺牲。</p>
+        </div>
+        <div class="subtitle">意大利新现实主义电影</div>
+        <p class="para">二战战败国的意大利，战后社会一片动乱，人民在极度贫困和绝望中挣扎。意大利年轻电影
+            艺术家以争取社会进步、民主、平等为思想旗帜，把自己的艺术目光从形式主义转为现实主义，以忠实地
+            反映历史的真实与面临的现实为艺术纲领，创造了一批极为朴实、真挚、深刻的艺术影片。<br><br>
+            主张通过普通生活反映社会问题，以日常生活代替虚构的故事：“生活即艺术”;注重展现和讲述，不给观众
+            提供“答案”；在选角方面反对职业演员，同时反对编导分家。<br><br>
+            在形式上为了营造现实感，用实景拍摄、自然光、长镜头、深焦距。<br><br>
+            代表:罗西里尼《罗马，不设防城市》、《游击队》，德·西卡《擦鞋童》，德·桑蒂斯《艰辛的米》、
+            《橄榄树下无和平》，维斯康蒂《大地在波动》，捷尔米《以法律的名义》、《两分钱的希望》。
+        </p>
+    </div>
+
+    <h2>1960s</h2>
+    <div class="box-2" style="background-color: rgb(224, 224, 255);color: rgb(77, 55, 55);">
+        <div class="subtitle">法国新浪潮电影</div>
+        <p class="para">受新现实主义影响，强烈反传统、强调艺术创新;将抽象的哲理转化成具像的画面。往往集编
+            剧、导演、对自、音乐，甚至制片于一身，形成了统一的制片方式。与传统明星制度相对立，他们启用了大
+            批不知名的年轻人做演员。大量采用自然音响环境。哲学基础来自存在主义。<br><br>
+            “新浪潮”带有强烈的个人色彩，不少影片都有强烈的个人传记色彩。在艺术上突破传统电影语言的同时，避
+            免过分脱离一般观众的欣赏习惯;用长镜头代替蒙太奇，移动摄影代替固定摄影，跳接；很少使用隐喻。延
+            续了对人性、生命的关照，都是非政治性的电影。<br><br>
+            代表︰夏布罗尔《表兄弟》，特吕弗《胡作非为》，戈达尔《精疲力尽》，雷乃《广岛之恋》、《去年在马
+            里昂巴德》。
+        </p>
+        <div class="img">
+            <img src="img/hiroshima.jpg">
+            <p>《广岛之恋》<br>1957年，法国女演员（埃曼纽尔•莉娃）来到日本广岛拍摄一部宣传和平的电影时，邂逅
+                当地的建筑工程师（冈田英次），两人在短暂时间内忘记各自的有夫之妇、有妇之夫身份，产生忘我恋情。
+            </p>
         </div>
     </div>
-    <br>
-    <div style="width:100%;display: flex;">
+
+    <h2>1960s至今</h2>
+    <div class="box-1" style="background-color: rgb(235, 235, 253);color: rgb(77, 55, 55);">
+        <div class="img">
+            <img src="img/bridge.jpg">
+            <p>《魂断蓝桥》<br>第一次世界大战期间，回国度假的陆军中尉罗伊在滑铁卢桥上邂逅了舞蹈演员玛拉</p>
+            <img src="img/starwars.jpg">
+            <p>《星球大战》<br>星际争霸、原力、光速旅行、绝地武士和探索</p>
+        </div>
+        <div class="subtitle">新好莱坞电影</div>
+        <p class="para"><b>旧好莱坞（也称经典好莱坞）</b>阶段大约从1930年经济大萧条开始，到1960年冷战初期结束。
+            在艺术上，它确立了所有类型片的模式（音乐歌舞片、喜剧片、西部片、悬念片、恐怖片、犯罪片等），
+            好莱坞电影创作不是一种个人的行为，规范的制片制度使电影制作成为一种批量的、流水线式的规范化过程：
+            即戏剧化的故事结构，类型化的人物形象和自然流畅的连续性剪辑。<br><br><br><br>
+            而20世纪60年代开始，在新浪潮影响下的好莱坞开始寻求革新。崇尚“新浪潮”和“作者电影”论的导演迅速加入，
+            使得好莱坞的风格开始呈现百家争鸣的场面，不再被类型片所限制，进入了现代电影时代。<br><br>
+            在情节结构上，<b>新好莱坞电影</b>打破追求戏剧性的单向叙事模式，时空转换更加灵活，不再追求故事情节的完整性
+            而寻求开放的结尾。人物方面不再定型化，而是根据其性格自身的发展展现其自然本性。探索电影新可能，更加
+            重视包括镜头语言在内的电影技巧的开拓。新好莱坞电影不追求银幕上的真实而是运用各种电影技巧使其产生一
+            定的间离效果。<br><br>
+            代表：佩恩《邦妮和克莱德》，斯科西斯《出租汽车司机》，科波拉《教父》、《对话》，乔治·卢卡斯《星球大
+            战》、《夺宝奇兵》，斯皮尔伯格《大白鲨》、《外星人》。
+        </p>
+    </div>
+
+
+    <div style="width:100%;display: flex;margin-top: 200px;">
         <img src="img/11.jpg" width="25%"><img src="img/22.jpg" width="25%"> <img src="img/33.jpg" width="25%"><img src="img/44.jpg"
             width="25%">
     </div>
 </body>
+
 <style>
     body{
         background-image: url(img/bg.jpg);
@@ -89,10 +144,22 @@
         color: rgb(255, 145, 0);
     }
 
+    h2{
+        margin-top: 100px;
+    }
+
     .box-1 {
         background-color: whitesmoke;
         width: 80%;
-        margin-left: 20px;
+        height: auto;
+        margin-left: 30px;
+        margin-bottom: 40px;
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        border-radius: 0 0 20px 0;
+        
     }
     .box-2 {
         background-color: whitesmoke;
@@ -100,14 +167,53 @@
         float: right;
         margin-left: 20%;
         margin-right: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        position: relative;
+        border-radius: 20px 0 0 0;
     }
 
     .para {
-        color: rgb(114, 57, 16);
-        margin: 10px;
+        margin: 20px;
+        font-size: 1.2vw;
     }
 
+    .img{
+        float: left;
+        height: 95%;
+        width: 40%;
+        padding: 10px;
+        text-align: center;
+    }
+
+    .box-1 .subtitle{
+        position: absolute;
+        left:15%;
+        top: -5%;
+        font-size: 30px;
+        font-family: "黑体";
+        color: rgb(130, 216, 0);
+    }
+
+    .box-2 .subtitle{
+        position: absolute;
+        right:15%;
+        top: -5%;
+        font-size: 30px;
+        font-family: "黑体";
+        color: rgb(130, 216, 0);
+    }
+
+    .img > img{
+        width:80%;
+    }
+
+    .img > p{
+        font-size: 10px;
+        color: gray;
+    }
 </style>
 
 </body>
