--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-04 22:42:55
- * @LastEditors: your name
+ * @LastEditTime: 2021-11-05 15:11:50
+ * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
 -->
@@ -13,7 +13,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <script src="js/index.js"></script>
     <title>电影艺术</title>
   </head>
   <body>
@@ -55,8 +54,12 @@
           <h1 data-char="电影艺术">电影艺术</h1>
         </div>
       </div>
-      <div class="sc3"></div>
-      <div class="sc4"></div>
+      <div class="sc3">
+        <div class="background"><span>特效</span></div>
+      </div>
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/index.js"></script>
+    
   </body>
 </html>
