--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <video src="videos/202111041346.mp4"  id="s1video" muted loop autoplay playsinline></video>
         <img src="imgs/player.png" id="player" onclick="playpause()">
         <p class="vidintro">1895年，电影的发明者卢米埃尔兄弟利用“活动摄影机”拍摄了世界上第一批电影。我们司空见惯的光影
-          在那时尚为难以理解的高科技。<br>影片《火车进站》中，火车头冲着镜头呼啸而过，当时的观众看了大吃一
+          在那时尚为难以理解的高科技。<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片《火车进站》中，火车头冲着镜头呼啸而过，当时的观众看了大吃一
           惊，十分恐慌，以为真的火车迎面而来，吓得惊慌四散。</p>
       </div>
 
