--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <script src="js/index.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/index.js"></script>    
     <title>电影艺术</title>
   </head>
   <body>
