--- a/index2/index2.html
+++ b/index2/index2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>电影流派史</title>
     <script src="../js/jquery.js"></script>
-    <script src="../js/index2.js"></script>
+    <script src="index2.js"></script>
 </head>
 
 <body>
@@ -16,45 +16,33 @@
     <div class="box-1" id="box1" style="background-color: rgb(255, 240, 217);color: rgb(77, 55, 55);">
         <div class="img">
             <img src="img/grandma's.jpg">
-            <p>《祖母的放大镜》<br>由George Albert Smith执导，是一部无声短片，片中，年轻的Willy借用
-                一个巨大的放大镜聚焦于各种物体，目的是演示电影特写新技术。</p>
+            <p>《祖母的放大镜》<br>由George Albert Smith执导，是一部无声短片，片中，年轻的Willy借用一个巨大的放大镜聚焦于各种物体，目的是演示电影特写新技术。</p>
         </div>
         <div class="subtitle">布 莱 顿 学 派</div>
-        <p class="para">起源于英国布莱顿地区的布莱顿学派是世界电影史上有据可考的第一个学术流派。
-            主张在露天场景中创造真实的生活片段，是现实主义的萌芽，对重大社会问题予以了充分的关注和
-            表现。给电影带来了早期蒙太奇，从而通过电影画面的有机组合，使得电影开始具备了属于自己所
-            独有的叙事语言。<br><br>
-            代表:乔治·阿尔培特·斯密士《祖母的放大镜》、《望远镜中所见的景象》、《玛丽珍妮的灾难》，
-            詹姆士·威廉逊《中国教会被袭记》，埃斯美·柯林斯《汽车中的婚礼》，西赛尔·海普华斯《义犬
-            救主记》。
+        <p class="para">起源于英国布莱顿地区的布莱顿学派是世界电影史上有据可考的第一个学术流派。主张在露天场景中创造真实的生活片段，是现实主义的萌芽，对重大社会问题予以了充分的关注和表现。它为电影带来了早期蒙太奇，通过电影画面的有机组合，使得电影开始具备了属于自己所独有的叙事语言。<br><br>
+        代表:乔治·阿尔培特·斯密士《祖母的放大镜》、《望远镜中所见的景象》、《玛丽珍妮的灾难》，詹姆士·威廉逊《中国教会被袭记》，埃斯美·柯林斯《汽车中的婚礼》，西赛尔·海普华斯《义犬救主记》。
         </p>
     </div>
 
     <div class="box-2" id="box2" style="background-color: rgb(255, 240, 217);color: rgb(77, 55, 55);">
         <div class="subtitle">欧 洲 先 锋 派</div>
-        <p class="para">强调先锋性和纯粹性，过分注重抽象的画面造型以及视觉情绪节奏；反对电影商业
-            化，主张电影是小众的无功利的纯粹艺术品；反对叙事，反对情节和人物刻画，主张以抽象的图形、
-            唯美的形式和空洞的抒情做为全部内容；反对理性，喜欢联想，拒绝现实，喜欢梦幻。<br><br>
+        <p class="para">强调先锋性和纯粹性，过分注重抽象的画面造型以及视觉情绪节奏；反对电影商业化，主张电影是小众的无功利的纯粹艺术品；反对叙事，反对情节和人物刻画，主张以抽象的图形、唯美的形式和空洞的抒情做为全部内容；反对理性，喜欢联想，拒绝现实，喜欢梦幻。<br><br>
             其子流派包括法国印象主义、超现实主义，德国表现主义<br><br>
-            代表作:费南·莱谢尔《机器的舞蹈》，雷内·克莱尔《休息节目》，路易·布努艾尔《一条安达鲁狗》
-            ，谢尔曼·杜拉克《贝壳与僧侣》，罗伯特·维内的《卡里加里博士》。
+            代表作:费南·莱谢尔《机器的舞蹈》，雷内·克莱尔《休息节目》，路易·布努艾尔《一条安达鲁狗》，谢尔曼·杜拉克《贝壳与僧侣》，罗伯特·维内的《卡里加里博士》。
         </p>
         <div class="img">
             <img src="img/a dog.jpg">
-            <p>《一条安达鲁狗》<br>超现实主义电影之父路易斯·布努埃尔和超现实主义画家萨尔瓦多·达利的跨界合作。表现的是人
-                的梦境和潜意识。</p>
+            <p>《一条安达鲁狗》<br>超现实主义电影之父路易斯·布努埃尔和超现实主义画家萨尔瓦多·达利的跨界合作。表现的是人的梦境和潜意识。</p>
         </div>
     </div>
     <h2>1920s</h2>
     <div class="box-1" id="box3" style="background-color: whitesmoke;color: rgb(77, 55, 55);">
         <div class="img">
             <img src="img/ship.jpg">
-            <p>《战舰波将金号》<br>一艘名为波将金号的战舰上，原本这是一艘沙皇海军的骄傲，可是因为连续数
-                月的伙食太差，导致了一场哗变，一场血腥的反抗即将展开。</p>
+            <p>《战舰波将金号》<br>一艘名为波将金号的战舰上，原本这是一艘沙皇海军的骄傲，可是因为连续数月的伙食太差，导致了一场哗变，一场血腥的反抗即将展开。</p>
         </div>
         <div class="subtitle">苏联蒙太奇电影学派</div>
-        <p class="para">蒙太奇，电影的一种表现手法，指通过拼接两个或多个本无关联的镜头，展现一个意思连
-            贯的情节或一段情感。即当拼接不同镜头在，产生各镜头单独存在时所不具有的特定含义。<br><br>
+        <p class="para">蒙太奇，电影的一种表现手法，指通过拼接两个或多个本无关联的镜头，展现一个意思连贯的情节或一段情感。即当拼接不同镜头后，产生各镜头单独存在时所不具有的特定含义。<br><br>
             20世纪20年代，蒙太奇是电影的基础，在镜头与镜头之间运用对比、隐喻、重复、变换节奏等组合手法。
             <br>代表︰爱森斯坦《战舰波将金号》，普多夫金《母亲》。
         </p>
@@ -64,37 +52,27 @@
     <div class="box-1" id="box4" style="background-color: whitesmoke;color: rgb(77, 55, 55)">
         <div class="img">
             <img src="img/roam.jpg">
-            <p>《罗马，不设防的城市》<br>1944年，罗马，被纳粹侵占下伤痕累累的大街。德军肆无忌惮的搜捕着保
-                卫家园的游击队，意大利地下反抗组织领袖乔治·曼菲蒂坚持完成任务，被捕后英勇牺牲。</p>
+            <p>《罗马，不设防的城市》<br>1944年，罗马，被纳粹侵占下伤痕累累的大街。德军肆无忌惮地搜捕着保卫家园的游击队，意大利地下反抗组织领袖乔治·曼菲蒂坚持完成任务，被捕后英勇牺牲。</p>
         </div>
         <div class="subtitle">意大利新现实主义电影</div>
-        <p class="para">二战战败国的意大利，战后社会一片动乱，人民在极度贫困和绝望中挣扎。意大利年轻电影
-            艺术家以争取社会进步、民主、平等为思想旗帜，把自己的艺术目光从形式主义转为现实主义，以忠实地
+        <p class="para">二战战败国的意大利，战后社会一片动乱，人民在极度贫困和绝望中挣扎。意大利年轻电影艺术家以争取社会进步、民主、平等为思想旗帜，把自己的艺术目光从形式主义转为现实主义，以忠实地
             反映历史的真实与面临的现实为艺术纲领，创造了一批极为朴实、真挚、深刻的艺术影片。<br><br>
-            主张通过普通生活反映社会问题，以日常生活代替虚构的故事：“生活即艺术”;注重展现和讲述，不给观众
-            提供“答案”；在选角方面反对职业演员，同时反对编导分家。<br><br>
+            主张通过普通生活反映社会问题，以日常生活代替虚构的故事：“生活即艺术”；注重展现和讲述，不给观众提供“答案”；在选角方面反对职业演员，同时反对编导分家。<br><br>
             在形式上为了营造现实感，用实景拍摄、自然光、长镜头、深焦距。<br><br>
-            代表:罗西里尼《罗马，不设防的城市》、《游击队》，德·西卡《擦鞋童》，德·桑蒂斯《艰辛的米》、
-            《橄榄树下无和平》，维斯康蒂《大地在波动》，捷尔米《以法律的名义》、《两分钱的希望》。
+            代表:罗西里尼《罗马，不设防的城市》、《游击队》，德·西卡《擦鞋童》，德·桑蒂斯《艰辛的米》、《橄榄树下无和平》，维斯康蒂《大地在波动》，捷尔米《以法律的名义》、《两分钱的希望》。
         </p>
     </div>
 
     <h2>1960s</h2>
     <div class="box-2" id="box5" style="background-color: rgb(224, 224, 255);color: rgb(77, 55, 55);">
         <div class="subtitle">法国新浪潮电影</div>
-        <p class="para">受新现实主义影响，强烈反传统、强调艺术创新;将抽象的哲理转化成具像的画面。往往集编
-            剧、导演、对自、音乐，甚至制片于一身，形成了统一的制片方式。与传统明星制度相对立，他们启用了大
-            批不知名的年轻人做演员。大量采用自然音响环境。哲学基础来自存在主义。<br><br>
-            “新浪潮”带有强烈的个人色彩，不少影片都有强烈的个人传记色彩。在艺术上突破传统电影语言的同时，避
-            免过分脱离一般观众的欣赏习惯;用长镜头代替蒙太奇，移动摄影代替固定摄影，跳接；很少使用隐喻。延
-            续了对人性、生命的关照，都是非政治性的电影。<br><br>
-            代表︰夏布罗尔《表兄弟》，特吕弗《胡作非为》，戈达尔《精疲力尽》，雷乃《广岛之恋》、《去年在马
-            里昂巴德》。
+        <p class="para">受新现实主义影响，强烈反传统、强调艺术创新;将抽象的哲理转化成具像的画面。往往集编剧、导演、对自、音乐，甚至制片于一身，形成了统一的制片方式。与传统明星制度相对立，他们启用了大批不知名的年轻人做演员。大量采用自然音响环境。哲学基础来自存在主义。<br><br>
+            “新浪潮”带有强烈的个人色彩，不少影片都有强烈的个人传记色彩。在艺术上突破传统电影语言的同时，避免过分脱离一般观众的欣赏习惯;用长镜头代替蒙太奇，移动摄影代替固定摄影，跳接；很少使用隐喻。延续了对人性、生命的关照，都是非政治性的电影。<br><br>
+            代表︰夏布罗尔《表兄弟》，特吕弗《胡作非为》，戈达尔《精疲力尽》，雷乃《广岛之恋》、《去年在马里昂巴德》。
         </p>
         <div class="img">
             <img src="img/hiroshima.jpg">
-            <p>《广岛之恋》<br>1957年，法国女演员（埃曼纽尔•莉娃）来到日本广岛拍摄一部宣传和平的电影时，邂逅
-                当地的建筑工程师（冈田英次），两人在短暂时间内忘记各自的有夫之妇、有妇之夫身份，产生忘我恋情。
+            <p>《广岛之恋》<br>1957年，法国女演员（埃曼纽尔•莉娃）来到日本广岛拍摄一部宣传和平的电影时，邂逅当地的建筑工程师（冈田英次），两人在短暂时间内忘记各自的有夫之妇、有妇之夫身份，产生忘我恋情。
             </p>
         </div>
     </div>
@@ -108,18 +86,12 @@
             <p>《星球大战》<br>星际争霸、原力、光速旅行、绝地武士和探索</p>
         </div>
         <div class="subtitle">新好莱坞电影</div>
-        <p class="para"><b>旧好莱坞（也称经典好莱坞）</b>阶段大约从1930年经济大萧条开始，到1960年冷战初期结束。
-            在艺术上，它确立了所有类型片的模式（音乐歌舞片、喜剧片、西部片、悬念片、恐怖片、犯罪片等），
-            好莱坞电影创作不是一种个人的行为，规范的制片制度使电影制作成为一种批量的、流水线式的规范化过程：
-            即戏剧化的故事结构，类型化的人物形象和自然流畅的连续性剪辑。<br><br><br><br>
+        <p class="para"><b>旧好莱坞（也称经典好莱坞）</b>阶段大约从1930年经济大萧条开始，到1960年冷战初期结束。在艺术上，它确立了所有类型片的模式（音乐歌舞片、喜剧片、西部片、悬念片、恐怖片、犯罪片等），好莱坞电影创作不是一种个人的行为，规范的制片制度使电影制作成为一种批量的、流水线式的规范化过程：即戏剧化的故事结构，类型化的人物形象和自然流畅的连续性剪辑。<br><br><br><br>
             而20世纪60年代开始，在新浪潮影响下的好莱坞开始寻求革新。崇尚“新浪潮”和“作者电影”论的导演迅速加入，
             使得好莱坞的风格开始呈现百家争鸣的场面，不再被类型片所限制，进入了现代电影时代。<br><br>
-            在情节结构上，<b>新好莱坞电影</b>打破追求戏剧性的单向叙事模式，时空转换更加灵活，不再追求故事情节的完整性
-            而寻求开放的结尾。人物方面不再定型化，而是根据其性格自身的发展展现其自然本性。探索电影新可能，更加
-            重视包括镜头语言在内的电影技巧的开拓。新好莱坞电影不追求银幕上的真实而是运用各种电影技巧使其产生一
-            定的间离效果。<br><br>
-            代表：佩恩《邦妮和克莱德》，斯科西斯《出租汽车司机》，科波拉《教父》、《对话》，乔治·卢卡斯《星球大
-            战》、《夺宝奇兵》，斯皮尔伯格《大白鲨》、《外星人》。
+            在情节结构上，<b>新好莱坞电影</b>打破追求戏剧性的单向叙事模式，时空转换更加灵活，不再追求故事情节的完整性而寻求开放的结尾。人物方面不再定型化，而是根据其性格自身的发展展现其自然本性。探索电影新可能，更加
+            重视包括镜头语言在内的电影技巧的开拓。新好莱坞电影不追求银幕上的真实而是运用各种电影技巧使其产生一定的间离效果。<br><br>
+            代表：佩恩《邦妮和克莱德》，斯科西斯《出租汽车司机》，科波拉《教父》、《对话》，乔治·卢卡斯《星球大战》、《夺宝奇兵》，斯皮尔伯格《大白鲨》、《外星人》。
         </p>
     </div>
 
@@ -131,8 +103,8 @@
         <img src="img/33.jpg" id="img3">        
         <img src="img/44.jpg" id="img4">       
         <div class="imginfo">
-        <div class="info">Luis Buñuel 西班牙国宝级电影导演、电影剧作家、制片人。1920年创办了西班牙第一个电影俱乐部。1924年，布努埃尔侨居巴黎，任法国先锋派导演让·爱普斯坦的助手，并在其创办的电影学校学习。1928年和西班牙著名画家达利合作，拍摄了超现实主义的奠基之作《一条安达鲁狗》，在巴黎引起强烈轰动。</div>
-        <div class="info">Jean-Luc Godard（让·吕克·戈达尔）法国和瑞士藉导演，法国新浪潮电影的奠基者之一。戈达尔的电影通常被视为挑战和抗衡好莱坞电影的拍摄手法和叙事风格。他也把自己的政治思想注入他的电影，在他的作品里可以经常发现存在主义和马克思主义哲学的影子。</div>
+        <div class="info">Luis Buñuel（路易斯·布努埃尔）西班牙国宝级电影导演、电影剧作家、制片人。1920年创办了西班牙第一个电影俱乐部。1928年和西班牙著名画家达利合作，拍摄了超现实主义的奠基之作《一条安达鲁狗》，在巴黎引起强烈轰动。</div>
+        <div class="info">Jean-Luc Godard（让·吕克·戈达尔）法国和瑞士藉导演，法国新浪潮电影的奠基者之一。戈达尔的电影通常被视为对好莱坞电影拍摄手法和叙事风格的挑战和抗衡。他也把自己的政治思想注入他的电影，在他的作品里可以经常发现存在主义和马克思主义哲学的影子。</div>
         <div class="info">Agnès Varda（阿涅斯·瓦尔达），法国女导演，有“新浪潮祖母”的美誉。1954年自编自导第一部剧情长片《短角情事》，独特的叙事结构及低成本的制片方式，被视为法国新浪潮的先声。当时瓦尔达对电影了解得不多，对摄影器材也一知半解，但她对拍片的狂热和旺盛的创作力，却从一开始就令人惊艳。</div>
         <div class="info"> Stanley Kubrick（斯坦利·库布里克） 好莱坞最褒贬不一也最性格怪异的导演。影片中不可思议的视觉风格为他赢得如潮好评，而他非传统的叙述感又常常会引来轻蔑的挑剔。他的《洛丽塔》被大多数人认为是改编电影中最好的一部，《发条橙》中的暴力场面引发轰动，《2001：太空漫游》对人类历史进程进行史诗般描绘，被评为“有史以来最佳的科幻片”</div>
         </div>
@@ -187,10 +159,7 @@
         opacity: 0;
     }
 
-    .appear{
-        animation: appear 0.8s ease-in-out;
-    }
-
+    
     .para {
         margin: 20px;
         font-size: 1.2vw;
@@ -209,7 +178,8 @@
         left:15%;
         top: -5%;
         font-size: 30px;
-        font-family: "黑体";
+        font-family: "STZhongsong";
+        font-weight: 900;
         color: rgb(130, 216, 0);
     }
 
@@ -218,7 +188,8 @@
         right:15%;
         top: -5%;
         font-size: 30px;
-        font-family: "黑体";
+        font-family: "STZhongsong";
+        font-weight: 900;
         color: rgb(130, 216, 0);
     }
 
