--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-05 15:11:50
+ * @LastEditTime: 2021-11-05 15:55:24
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -56,6 +56,11 @@
       </div>
       <div class="sc3">
         <div class="background"><span>特效</span></div>
+        <div class="last">
+          <div class="letter1">是电影的艺术</div>
+          <div class="letter2">而电影</div>
+          <div class="letter3">是生活的艺术</div>
+        </div>
       </div>
     </div>
     <script src="js/jquery.js"></script>
