--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="sc2">
-        <video src="videos/250304087_nb2-1-64~1.mp4" id="s2video" muted loop autoplay playsinline></video>
+        <video src="videos/Av9289176.mp4" id="s2video" muted loop autoplay playsinline></video>
         <div class="runbox">
             <div class="card1">
                 <div class="circle"></div>
