--- a/index1/index1.html
+++ b/index1/index1.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-03 19:11:01
- * @LastEditTime: 2021-11-05 10:54:03
+ * @LastEditTime: 2021-11-06 08:08:32
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index1\index1.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>电影技术发展史</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="../imgs/15film.png" type="image/x=ico" />
   </head>
   <body>
     <main class="main">
@@ -22,7 +23,7 @@
         </div>
         <div class="timecard count1">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>1870</p>
           <div class="jiantou count1">
@@ -65,7 +66,7 @@
         </div>
         <div class="timecard count2">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>1900</p>
         </div>
@@ -107,7 +108,7 @@
         </div>
         <div class="timecard count3">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>1927</p>
         </div>
@@ -150,7 +151,7 @@
         </div>
         <div class="timecard count4">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>1951</p>
         </div>
@@ -192,7 +193,7 @@
         </div>
         <div class="timecard count5">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>1970</p>
         </div>
@@ -234,7 +235,7 @@
         </div>
         <div class="timecard count6">
           <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
+            <img src="images/bg.jpg" />
           </div>
           <p>2000</p>
         </div>
