--- a/index2/index2.html
+++ b/index2/index2.html
@@ -8,6 +8,7 @@
     <title>电影流派史</title>
     <script src="../js/jquery.js"></script>
     <script src="index2.js"></script>
+    <link rel="icon" href="../imgs/15film.png" type="image/x=ico" />
 </head>
 
 <body>
