--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-06 07:56:37
+ * @LastEditTime: 2021-11-06 08:44:12
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -23,7 +23,9 @@
           <p class="vidsubtitle">*点击放映机播放/暂停*</p>
         </p>        
         <video src="videos/202111041346.mp4"  id="s1video" muted loop autoplay playsinline></video>
-        <img src="imgs/player.png" id="player" onclick="playpause()">
+        <div class="player">
+          <img src="imgs/player.png" id="player" onclick="playpause()">
+        </div>
         <p class="vidintro">1895年，电影的发明者卢米埃尔兄弟利用“活动摄影机”拍摄了世界上第一批电影。我们司空见惯的光影
           在那时尚为难以理解的高科技。<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片《火车进站》中，火车头冲着镜头呼啸而过，当时的观众看了大吃一
           惊，十分恐慌，以为真的火车迎面而来，吓得惊慌四散。</p>
