--- a/index2/index2.html
+++ b/index2/index2.html
@@ -248,6 +248,65 @@
     0% { opacity: 0; }
     100%{ opacity: 1; }
 }
+@media screen and (max-width: 1600px) {
+  html {
+      font-size: 16px;
+  }
+}
+@media screen and (max-width: 1500px) {
+  html {
+      font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  html {
+      font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  html {
+      font-size: 12px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  html {
+      font-size: 10px;
+  }
+  #s1video{
+    top: 130px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  html {
+      font-size: 8px;
+  }
+  #s1video{
+    top: 200px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  html {
+      font-size: 7px;
+  }
+  #s1video{
+    top: 200px;
+  }
+}
+@media screen and (max-width: 600px) {
+  html {
+      font-size: 5px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  html {
+      font-size: 4px;
+  }
+}
 </style>
 
 </body>
