--- a/index2/index2.html
+++ b/index2/index2.html
@@ -114,6 +114,7 @@
 
 <style>
     body{
+        user-select: none;
         background-image: url(img/bg.jpg);
         background-repeat:repeat-y;
         background-size: contain;
