--- a/index2/index2.html
+++ b/index2/index2.html
@@ -162,7 +162,7 @@
     
     .para {
         margin: 20px;
-        font-size: 1.2vw;
+        font-size: 1.15rem;
     }
 
     .img{
@@ -175,31 +175,31 @@
 
     .box-1 .subtitle{
         position: absolute;
-        left:15%;
-        top: -5%;
+        right:1%;
+        top: 1%;
         font-size: 30px;
-        font-family: "STZhongsong";
         font-weight: 900;
-        color: rgb(130, 216, 0);
+        color: rgb(13,13,13);
     }
 
     .box-2 .subtitle{
         position: absolute;
-        right:15%;
-        top: -5%;
+        left:1%;
+        top: 1%;
         font-size: 30px;
-        font-family: "STZhongsong";
         font-weight: 900;
-        color: rgb(130, 216, 0);
+        color: rgb(13,13,13);
     }
 
     .img > img{
         width:80%;
+        min-width: 156px;
+        max-width: 160px;
     }
 
     .img > p{
         font-size: 10px;
-        color: gray;
+        color: rgb(105, 105, 105);
     }
 
     .imgbox{
@@ -227,7 +227,8 @@
         width: 100%;
         position: absolute;
         display: flex;
-        top:10px
+        top:10px;
+        font-size: 2.2vh;
     }
 
     .imgbox .imginfo > div{
