完善细节和readme

--- a/index2/index2.html
+++ b/index2/index2.html
@@ -8,6 +8,7 @@
     <title>电影流派史</title>
     <script src="../js/jquery.js"></script>
     <script src="index2.js"></script>
+    <link rel="stylesheet" href="styles/index2.css">
     <link rel="icon" href="../imgs/15film.png" type="image/x=ico" />
 </head>
 
@@ -110,206 +111,6 @@
         <div class="info"> Stanley Kubrick（斯坦利·库布里克） 好莱坞最褒贬不一也最性格怪异的导演。影片中不可思议的视觉风格为他赢得如潮好评，而他非传统的叙述感又常常会引来轻蔑的挑剔。他的《洛丽塔》被大多数人认为是改编电影中最好的一部，《发条橙》中的暴力场面引发轰动，《2001：太空漫游》对人类历史进程进行史诗般描绘，被评为“有史以来最佳的科幻片”</div>
         </div>
     </div>
-</body>
-
-<style>
-    body{
-        user-select: none;
-        background-image: url(img/bg.jpg);
-        background-repeat:repeat-y;
-        background-size: contain;
-        color: greenyellow;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    h1{
-        width: 100%;
-        text-align: center;
-        font-size: 50px;
-        color: rgb(255, 145, 0);
-    }
-
-    h2{
-        margin-top: 100px;
-    }
-
-    .box-1 {
-        background-color: whitesmoke;
-        width: 80%;
-        height: auto;
-        margin-left: -100%;
-        margin-bottom: 40px;
-        margin-top: 50px;
-        display: flex;
-        align-items: center;
-        position: relative;
-        border-radius: 0 0 20px 0;
-        opacity: 0;        
-    }
-    .box-2 {
-        background-color: whitesmoke;
-        width: 80%;
-        float: right;
-        margin-left: 20%;
-        margin-right: 30px;
-        margin-bottom: 40px;
-        margin-top: 50px;
-        display: flex;
-        align-items: center;
-        position: relative;
-        border-radius: 20px 0 0 0;
-        opacity: 0;
-    }
-
-    
-    .para {
-        margin: 20px;
-        font-size: 1.2vw;
-    }
-
-    .img{
-        float: left;
-        height: 95%;
-        width: 40%;
-        padding: 10px;
-        text-align: center;
-    }
-
-    .box-1 .subtitle{
-        position: absolute;
-        left:15%;
-        top: -5%;
-        font-size: 30px;
-        font-family: "STZhongsong";
-        font-weight: 900;
-        color: rgb(130, 216, 0);
-    }
-
-    .box-2 .subtitle{
-        position: absolute;
-        right:15%;
-        top: -5%;
-        font-size: 30px;
-        font-family: "STZhongsong";
-        font-weight: 900;
-        color: rgb(130, 216, 0);
-    }
-
-    .img > img{
-        width:80%;
-    }
-
-    .img > p{
-        font-size: 10px;
-        color: gray;
-    }
-
-    .imgbox{
-        width:100%;
-        display: flex;
-        margin-top: 300px;
-        justify-content: space-between;
-        position: relative;
-    }
-
-    .imgbox > p{
-        position: absolute;
-        top: -60px;
-        right: 10px;
-        font-size: 25px;
-    }
-
-    .imgbox > img{
-        margin: 10px;
-        width: 22%;
-        border:solid 5px rgba(245, 245, 245, 0.6) ;
-    }
-
-    .imgbox .imginfo{
-        width: 100%;
-        position: absolute;
-        display: flex;
-        top:10px
-    }
-
-    .imgbox .imginfo > div{
-        width: 22%;
-        margin: 35px;
-        padding: 8px;
-        background-color: rgba(45, 45, 45, 0.6);
-        opacity: 0;
-    }
-
-    .imginfo .info:hover{
-        animation: show 0.5s;
-        opacity: 1;
-    }
-
-    @keyframes show {
-    0% { opacity: 0; }
-    100%{ opacity: 1; }
-}
-@media screen and (max-width: 1600px) {
-  html {
-      font-size: 16px;
-  }
-}
-@media screen and (max-width: 1500px) {
-  html {
-      font-size: 15px;
-  }
-}
-
-@media screen and (max-width: 1400px) {
-  html {
-      font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  html {
-      font-size: 12px;
-  }
-}
-@media screen and (max-width: 1000px) {
-  html {
-      font-size: 10px;
-  }
-  #s1video{
-    top: 130px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  html {
-      font-size: 8px;
-  }
-  #s1video{
-    top: 200px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  html {
-      font-size: 7px;
-  }
-  #s1video{
-    top: 200px;
-  }
-}
-@media screen and (max-width: 600px) {
-  html {
-      font-size: 5px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  html {
-      font-size: 4px;
-  }
-}
-</style>
-
 </body>
 
 </html>
