--- a/index2/index2.html
+++ b/index2/index2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>电影流派史</title>
     <script src="../js/jquery.js"></script>
-    <script src="index2.js"></script>
+    <script src="./js/index2.js"></script>
     <link rel="stylesheet" href="styles/index2.css">
     <link rel="icon" href="../imgs/15film.png" type="image/x=ico" />
 </head>
