--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-10 12:26:11
+ * @LastEditTime: 2021-11-10 16:27:54
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -55,10 +55,13 @@
         </div>
       </div>
       <div class="sc2_3">
-
+        <div class="comparison" style="--slide: 500">
+          <input type="range" min="1" max="1000" value="500" class="slider" oninput="this.parentNode.style.setProperty('--slide', `${this.value}`)">
+        </div>
       </div>
       <div class="sc2_6">
-        
+      </div>
+      <div class="sc2_9">
       </div>
       <div class="sc3">
         <div class="background"><span>特效</span></div>
