--- a/index2/index2.html
+++ b/index2/index2.html
@@ -21,8 +21,8 @@
             <p>《祖母的放大镜》<br>由George Albert Smith执导，是一部无声短片，片中，年轻的Willy借用一个巨大的放大镜聚焦于各种物体，目的是演示电影特写新技术。</p>
         </div>
         <div class="subtitle">布 莱 顿 学 派</div>
-        <p class="para">起源于英国布莱顿地区的布莱顿学派是世界电影史上有据可考的第一个学术流派。主张在露天场景中创造真实的生活片段，是现实主义的萌芽，对重大社会问题予以了充分的关注和表现。它为电影带来了早期蒙太奇，通过电影画面的有机组合，使得电影开始具备了属于自己所独有的叙事语言。<br><br>
-        代表:乔治·阿尔培特·斯密士《祖母的放大镜》、《望远镜中所见的景象》、《玛丽珍妮的灾难》，詹姆士·威廉逊《中国教会被袭记》，埃斯美·柯林斯《汽车中的婚礼》，西赛尔·海普华斯《义犬救主记》。
+        <p class="para">起源于英国布莱顿地区的布莱顿学派是世界电影史上有据可考的第一个学术流派。其主张在露天场景中创造真实的生活片段，是现实主义的萌芽，对重大社会问题予以了充分的关注和表现。它为电影带来了早期蒙太奇，通过电影画面的有机组合，使得电影开始具备了属于自己所独有的叙事语言。<br><br>
+        代表:乔治·阿尔培特·斯密士《祖母的放大镜》《望远镜中所见的景象》《玛丽珍妮的灾难》，詹姆士·威廉逊《中国教会被袭记》，埃斯美·柯林斯《汽车中的婚礼》，西赛尔·海普华斯《义犬救主记》。
         </p>
     </div>
 
@@ -61,16 +61,16 @@
             反映历史的真实与面临的现实为艺术纲领，创造了一批极为朴实、真挚、深刻的艺术影片。<br><br>
             主张通过普通生活反映社会问题，以日常生活代替虚构的故事：“生活即艺术”；注重展现和讲述，不给观众提供“答案”；在选角方面反对职业演员，同时反对编导分家。<br><br>
             在形式上为了营造现实感，用实景拍摄、自然光、长镜头、深焦距。<br><br>
-            代表:罗西里尼《罗马，不设防的城市》、《游击队》，德·西卡《擦鞋童》，德·桑蒂斯《艰辛的米》、《橄榄树下无和平》，维斯康蒂《大地在波动》，捷尔米《以法律的名义》、《两分钱的希望》。
+            代表:罗西里尼《罗马，不设防的城市》《游击队》，德·西卡《擦鞋童》，德·桑蒂斯《艰辛的米》《橄榄树下无和平》，维斯康蒂《大地在波动》，捷尔米《以法律的名义》、《两分钱的希望》。
         </p>
     </div>
 
     <h2>1960s</h2>
     <div class="box-2" id="box5" style="background-color: rgb(224, 224, 255);color: rgb(77, 55, 55);">
         <div class="subtitle">法国新浪潮电影</div>
-        <p class="para">受新现实主义影响，强烈反传统、强调艺术创新;将抽象的哲理转化成具像的画面。往往集编剧、导演、对自、音乐，甚至制片于一身，形成了统一的制片方式。与传统明星制度相对立，他们启用了大批不知名的年轻人做演员。大量采用自然音响环境。哲学基础来自存在主义。<br><br>
-            “新浪潮”带有强烈的个人色彩，不少影片都有强烈的个人传记色彩。在艺术上突破传统电影语言的同时，避免过分脱离一般观众的欣赏习惯;用长镜头代替蒙太奇，移动摄影代替固定摄影，跳接；很少使用隐喻。延续了对人性、生命的关照，都是非政治性的电影。<br><br>
-            代表︰夏布罗尔《表兄弟》，特吕弗《胡作非为》，戈达尔《精疲力尽》，雷乃《广岛之恋》、《去年在马里昂巴德》。
+        <p class="para">受新现实主义影响，新浪潮电影强烈反传统、强调艺术创新；将抽象的哲理转化成具像的画面。提出“作者电影”的口号，即“拍电影，重要的不是制作，而是成为电影的制作者”，往往集编剧、导演、音乐，甚至制片于一身。导演背弃传统明星制度，启用了大批不知名的年轻人做演员。大量采用自然音响环境；哲学基础来自存在主义。<br><br>
+            “新浪潮”带有鲜明的主观感受，不少影片都有强烈的个人传记色彩。在艺术上突破传统电影语言的同时，避免过分脱离一般观众的欣赏习惯；用长镜头代替蒙太奇，移动摄影代替固定摄影，跳接；很少使用隐喻。延续了对人性、生命的关照，都是非政治性的电影。<br><br>
+            代表︰夏布罗尔《表兄弟》，特吕弗《胡作非为》，戈达尔《精疲力尽》，雷乃《广岛之恋》《去年在马里昂巴德》。
         </p>
         <div class="img">
             <img src="img/hiroshima.jpg">
@@ -93,7 +93,7 @@
             使得好莱坞的风格开始呈现百家争鸣的场面，不再被类型片所限制，进入了现代电影时代。<br><br>
             在情节结构上，<b>新好莱坞电影</b>打破追求戏剧性的单向叙事模式，时空转换更加灵活，不再追求故事情节的完整性而寻求开放的结尾。人物方面不再定型化，而是根据其性格自身的发展展现其自然本性。探索电影新可能，更加
             重视包括镜头语言在内的电影技巧的开拓。新好莱坞电影不追求银幕上的真实而是运用各种电影技巧使其产生一定的间离效果。<br><br>
-            代表：佩恩《邦妮和克莱德》，斯科西斯《出租汽车司机》，科波拉《教父》、《对话》，乔治·卢卡斯《星球大战》、《夺宝奇兵》，斯皮尔伯格《大白鲨》、《外星人》。
+            代表：佩恩《邦妮和克莱德》，斯科西斯《出租汽车司机》，科波拉《教父》《对话》，乔治·卢卡斯《星球大战》《夺宝奇兵》，斯皮尔伯格《大白鲨》《外星人》。
         </p>
     </div>
 
